# myproject2025

./: .env  ANALISE_ENGENHARIA_REVERSA_WYDBR.md  CMakeLists.txt  CORRECOES_WYDBR2.0.md  DOCUMENTACAO_WYDSTUDIO.md  Doxyfile  Makefile  README.md  SETUP.md  build.bat  build_linux.sh  build_windows.bat  conversa_agente (copy).txt  conversa_agente.txt  generate_anticheat_system.sh  generate_combat_system.sh  generate_cpp_project.js  generate_world_system.sh  generate_wydbr_fix_report.js  git.gitignore  jest.config.js  main.cpp  package-lock.json  package.json
WYDBR/: CMakeLists.txt  COMANDOS ADM E GM.md  README.md  REQUISITOS_SISTEMA.md  SISTEMA_GRAFICO.md  SISTEMA_SEGURANCA_EXE.md  build.sh  estrutura_arquivos.md  implementation_guide_voip.md  mapeamento.md  minimal_db_test  modernization_plan.md
WYDBR/WYDStudio/: AssistentConversa.txt  Makefile  TERMOS_LINGUAGEM_WYD.md  WYDStudio_Implementation_Plan.md  WYDStudio_Integration.md  WYDStudio_Roadmap.md  compile.sh
WYDBR/backup/: CMakeLists.txt  EngenhariaReversa.md  analyze_all.js  analyze_wyd_exe.js  binary_converter.js  compilador_wydbrasil.js  reverse_bin_extractor.js  server_wydbrasil.js  start_web_compiler_wydbrasil.js  wyd_bin_analyzer.js  wyd_protocol_analyzer.js
WYDBR/backup_bat_completo_20250507_233053/: iniciar_seguro.bat  jogar_wydbrasil.bat
WYDBR/cliente/: Config.json  README.md  README.txt  README_DESENVOLVIMENTO.md  graphics_advanced.ini
WYDBR/cliente_distribuicao/: README.md  VERIFICAR_ARQUIVOS.md
WYDBR/cliente_final/: PRIMEIROS_PASSOS.txt  README.md  VERSION.txt  WYDBR.ini  verificacao.csv
WYDBR/config/: graphics_config.json
WYDBR/crypto/: jprotect_analyzer.js  wyd_deobfuscator.js
WYDBR/docs/: Arquivos_Faltantes_Sistema.txt  EngenhariaReversa.md  Esquemas_Banco_Dados_Faltantes.txt  Protocolos_Comunicacao.txt  SistemasCriticos.txt  hybrid_skill_system.md  metodologia_engenharia_reversa.md
WYDBR/exec/: WYDLauncher_Development.cs  WYDLauncher_Essential.cs  WydConfig_Development.cs
WYDBR/headers/: item_struct.h  mob_struct.h  packet_struct.h  quest_structs.h  wyd_core.h
WYDBR/network/: wyd_protocol.js
WYDBR/public/: compiler.html  index.html
WYDBR/security/: file_hashes.json  security_config.json
WYDBR/server/: build_tests.sh  generate_docs.sh  run_tests.sh
WYDBR/tools/: COMPATIBILIDADE.md  verify_compatibility.js
WYDStudio/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  DOCUMENTACAO.md  LICENSE  README.md  README_NLP_SYSTEM.md  WYDStudio_Core_Components.md  WYDStudio_Documentation.md  WYDStudio_Implementation_Plan.md  WYDStudio_Security.md  build.ps1  verify_functionality.sh
WYDStudio/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
WYDStudio/config/: default.json
WYDStudio/data/: expanded_language_terms.json
WYDStudio/docs/: EXPANDED_LANGUAGE_INTEGRATION.md  IA_ASSISTENTE.md  PAINEL_ADMINISTRATIVO.md
WYDStudio/resources/: dark_theme.qss  icons.qrc
WYDStudio/sql/: schema.sql
WYDStudio/ui_test/: Makefile
benchmarks/: CMakeLists.txt  benchmark_main.cpp
server/: CMakeLists.txt
src/: CMakeLists.txt  game_system_manager.js  index.js  orchestrator.js  server.js  system_integrator.js
src/Security/: SecurityManager.cpp
src/client/: CMakeLists.txt  Client.cpp  main.cpp
src/common/: CMakeLists.txt
src/config/: systems.json
src/core/: CacheSystem.cpp  CacheSystem.hpp  ClusterManager.cpp  ClusterManager.hpp  Config.cpp  Config.hpp  DatabaseManager.cpp  DatabaseManager.hpp  EventBroker.cpp  EventBroker.hpp  EventSystem.cpp  EventSystem.hpp  Logger.cpp  Logger.hpp  NetworkManager.cpp  NetworkManager.hpp  SecuritySystem.cpp  SecuritySystem.hpp  SystemManager.cpp  SystemManager.hpp  WYDTypes.h
src/core_systems/: EventSystem.js  GameplayManager.js  NetworkManager.js  SecuritySystem.js  sistema_banco_dados_distribuido.js  sistema_banimento.h  sistema_cache_hierarquico.js  sistema_chat.h  sistema_clustering_distribuido.js  sistema_combate.h  sistema_crafting.h  sistema_eventos.h  sistema_eventos_distribuidos.js  sistema_guildas.h  sistema_habilidades.h  sistema_inventario.h  sistema_log.h  sistema_partidas.h  sistema_personagem.h  sistema_quests.h  sistema_ranking.h
src/database/: DatabaseManager.cpp  DatabaseManager.hpp
src/dbsrv/: CMakeLists.txt
src/economy_systems/: sistema_economico_avancado.js
src/environment_systems/: sistema_clima_ambiente.js
src/events_systems/: sistema_eventos_mundiais.js
src/game/: CharacterSystem.cpp  CharacterSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  CraftingSystem.cpp  CraftingSystem.hpp  GuildSystem.cpp  GuildSystem.hpp  InventorySystem.cpp  InventorySystem.hpp  QuestSystem.cpp  QuestSystem.hpp  TerritorialWarSystem.cpp  TerritorialWarSystem.hpp  TradeSystem.cpp  TradeSystem.hpp
src/game_systems/: CharacterSystem.js  CombatSystem.js  combat_system.js  inventory_system.js
src/gameplay_systems/: CombatSystem.js  InventorySystem.js  QuestSystem.js  TradeSystem.js  sistema_crafting_expandido.js  sistema_guerra_territorial.js
src/guild_systems/: sistema_guildas_completo.js
src/integration/: CMakeLists.txt  DatabaseIntegration.js  SecurityIntegration.js  StudioIntegration.js  SystemIntegrator.cpp  SystemIntegrator.h  VoIPIntegration.js
src/network/: CryptoManager.cpp  NetworkManager.cpp  PacketHandler.cpp
src/screenshare/: CMakeLists.txt  ScreenShareSystem.cpp
src/security_systems/: sistema_anti_ddos_avancado.js  sistema_auditing_completo.js  sistema_deteccao_anomalias.js  sistema_protecao_exploits.js
src/server/: main.cpp
src/studio/: MainWindow.cpp  MainWindow.h  main.cpp
src/systems/: combat.js  inventory.js
src/tmsrv/: CMakeLists.txt
src/utils/: EventEmitter.cpp  EventEmitter.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.cpp  Timer.hpp  event_emitter.js  logger.js
src/voip/: CMakeLists.txt  VoIPSystem.cpp
src/wydstudio/: CMakeLists.txt  WYDStudio.cpp  main.cpp
tests/: CMakeLists.txt  LoadTestFramework.h  setup.js
tests/character/: CharacterSystemTest.cpp
tests/combat/: CombatSystemTest.cpp  DamageCalculatorTest.cpp
tests/integration/: integration_tests.cpp
(+1183 files in other folders)
